--- a/main.bib
+++ b/main.bib
@@ -15,3 +15,41 @@
     EPRINT = {https://math.stackexchange.com/q/3265},
     URL = {https://math.stackexchange.com/q/3265}
 }
+
+@incollection{MODENOV19651,
+title = {CHAPTER I - Projective Transformations},
+editor = {P.S. MODENOV and A.S. PARKHOMENKO},
+booktitle = {Projective Transformations},
+publisher = {Academic Press},
+pages = {1-110},
+year = {1965},
+isbn = {978-1-4832-2802-0},
+doi = {https://doi.org/10.1016/B978-1-4832-2802-0.50007-0},
+url = {https://www.sciencedirect.com/science/article/pii/B9781483228020500070},
+author = {P.S. MODENOV and A.S. PARKHOMENKO},
+abstract = {Publisher Summary
+This chapter discusses projective transformations. A set of points is called a projective line if it consists of all the points of an ordinary line, together with the ideal point of that line, or consists of all the ideal points of an ordinary plane. A set of points is regarded as a projective plane if it consists of all the points of an ordinary plane, together with the ideal line of that plane, or if it consists of all the ideal points. A projective transformation of projective space is a one–one mapping of the space onto itself under which the images of any three collinear points are collinear. The set of projective transformations of space is a group. The image of a plane is a plane, and the mapping restricted to this plane is a projective mapping of one projective plane onto another.}
+}
+
+@misc{Program,
+  title={Articulated Robotics},
+  url={https://articulatedrobotics.xyz/tutorials/coordinate-transforms/rotation-matrices-2d/},
+  journal={Articulated Robotics RSS}
+}
+
+@article{CRIMINISI1999625,
+title = {A plane measuring device},
+journal = {Image and Vision Computing},
+volume = {17},
+number = {8},
+pages = {625-634},
+year = {1999},
+issn = {0262-8856},
+doi = {https://doi.org/10.1016/S0262-8856(98)00183-8},
+url = {https://www.sciencedirect.com/science/article/pii/S0262885698001838},
+author = {A. Criminisi and I. Reid and A. Zisserman},
+keywords = {Video metrology, Error analysis, Projective geometry},
+abstract = {A requirement of a visual measurement device is that both measurements and their uncertainties can be determined. This paper develops an uncertainty analysis which includes both the errors in image localization and the uncertainty in the imaging transformation. The matrix representing the imaging transformation is estimated from image-to-world point correspondences. A general expression is derived for the covariance of this matrix. This expression is valid if the matrix is over determined and also if the minimum number of correspondences are used. A bound on the errors of the first order approximations involved is also derived. Armed with this covariance result the uncertainty of any measurement can be predicted, and furthermore the distribution of correspondences can be chosen to achieve a particular bound on the uncertainty. Examples are given of measurements such as distance and parallelism for several applications. These include indoor scenes and architectural measurements.}
+}
+
+@misc{Wren_1998, title={Perspective Transform Estimation}, url={https://web.archive.org/web/20100801071311/http://alumni.media.mit.edu/%7Ecwren/interpolator/}, journal={Perspective transform estimation}, author={Wren, Christopher  R.}, year={1998}} 
